--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-tsparticles": "^2.12.2",
     "react-typed": "^2.0.12",
     "resend": "^4.6.0",
+    "simple-icons": "^15.4.0",
+    "swiper": "^11.2.10",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
